# axiom-cloudwatch-forwarder

./: .envrc  .gitignore  .golangci.yml  .goreleaser.yml  .pre-commit-config.yaml  Axiom.py  CHANGELOG.md  Contributing.md  LICENSE  Makefile  Pipfile  README.md  app.py  axiom-cloudwatch-backfiller-lambda-cloudformation-stack.template.yaml  axiom-cloudwatch-lambda-cloudformation-stack.template.yaml  axiom-cloudwatch-lambda-cloudformation-stack.template.yaml.yaml  axiom-cloudwatch-log-subscriber-cloudformation-stack.template.yaml  axiom-cloudwatch-logs-subscriber-cloudformation-stack.template.yaml  backfill.py  cdk.json  cloudwatch-backfiller-axiom-cloudformation-stack.template.yaml  cloudwatch-ingester-axiom-cloudformation-stack.template.yaml  cloudwatch-subscriber-axiom-cloudformation-stack.template.yaml  doc.go  flake.nix  forwarder.py  go.mod  go.sum  handler.py  log_groups_listener.py  logs_subscriber.py  pyproject.toml  shell.nix  subscriber.py  test.py  tools.go  unsubscriber.py
.github/: CODEOWNERS
axiom-cloudwatch-lambda/: handler.py
cloudformation-stacks/: README.md  forwarder.template.yaml  listener.template.yaml  listener.yaml  log-groups-listener.template.yaml  subscriber.template.yaml  unsubscriber.template.yaml
decisions/: 001-renaming-ingester-to-forwarer.md  002-subscriber-and-unsubscriber-components.md  003-separate-code-for-terraform-module.md
docs/: terraform.md
lambda/: helpers.go  helpers_test.go
logs/: main.go
module/: README.md  data.tf  forwarder.tf  main.tf  output.tf  subscriber.tf  variables.tf
modules/: README.md
(+55 files in other folders)
